<resources>
    <string name="app_name">BeSocial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_register">Register</string>
    <string name="remember_my_email_and_password">Remember my email and password</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_email">Confirm email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="clear_fields">Clear Fields</string>
    <string name="create_account">Create Account</string>
    <string name="together_we_can_make_it_better">TOGETHER - WE CAN MAKE IT BETTER!</string>
    <string name="menu_my_profile">My profile</string>
    <string name="Notifications">Notifications</string>
    <string name="menu_social_center">Social center</string>
    <string name="menu_bonus_area">Bonus area</string>
    <string name="menu_settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="search_person_here">Search person here</string>
    <string name="system">System</string>
    <string name="about_besocial">About BeSocial</string>
    <string name="about">About</string>
    <string name="username">username</string>
    <string name="about_BeSocial">BeSocial application is a new social media application. Our main goal was to inspire and encourage you to be more active in society, help each other, make new connections, volunteer more and just to have fun. We would like to inform you that this app was made in great efforts, so we hope you appriciate, keep the rules and behave well. This application will only be used for peace purposes. Thank you for the understanding and have a pleasant use.</string>
    <string-array name="list_of_categories">
        <item>General</item>
        <item>Sports</item>
        <item>Games</item>
        <item>Social</item>
        <item>Environment</item>
    </string-array>
    <string-array name="list_of_bonus_area_categories">
        <item> </item>
        <item>Food</item>
        <item>Fun</item>
        <item>Sport</item>
        <item>Shopping</item>
    </string-array>
    <string-array name="list_of_social_levels">
        <item> </item>
        <item>Shy Socializer</item>
        <item>Out Of The Shell Socializer</item>
        <item>Academic Socializer</item>
        <item>Socialized Ninja Turtle</item>
        <item>Socialosaurus</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="social_level">Social Level:</string>
    <string name="social_points">Social Points:</string>
    <string name="my_photos">my photos</string>
    <string name="app_use_homepage">Home page- home contains users posts. You may create your own posts using the plus button at the top of the page.
        \nRemember that posts that will contain offensive words will NOT be published.</string>
    <string name="app_use_notifications">Notifications- notifications will notify you whenever you level up in your social rank, checked in at an event and when you
        connect with a new user. Do not forget the check your activities once in a while.</string>
    <string name="app_use_chat">Chat- in order to create a new chat, search for the desired user, enter his profile and click on the button next to the profile picture.
        \nConnect with new people to get social points.\nYou can see all your active chats in the Chat page.</string>
    <string name="app_use_socialcenter">Social Center- in the center, you are able to create your own events, take part in social meetings and help people.
        When you arrive to an event, remember to have the location and CheckIn button on, to claim the points. We encourage you to help others and socialize
        more.</string>
    <string name="app_use_bonuarea">Bonus Area- after claiming enough points, diversed benefits can be redeemed using social credits.\nSocial
        levels are as follows:\n\tShay Socializer: 0-199 points\n\tOut Of The Shell Socializer: 200-799 points\n\tAcademic Socializer: 800-2599 points
        \n\tSocialized Ninja Turtle: 2600-5999 points\n\tSocialosaurus: 6000+ points</string>
    <string name="app_use_7"></string>
    <string name="app_use_8"></string>
    <string name="app_use_9"></string>



</resources>
