<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!-- A group which only one item is selected and shown marked-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/Notifications" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_social_center"
            android:icon="@drawable/ic_menu_social_center"
            android:title="@string/menu_social_center" />
        <item
            android:id="@+id/nav_bonus_area"
            android:icon="@drawable/ic_menu_bonus_area"
            android:title="@string/menu_bonus_area" />

    </group>
    <!--  On "Communicate" when an item is selected it only does an action and is not shown marked-->
    <item android:title="@string/system">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />

        </menu>

    </item>
</menu>
