<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp"
        android:tint="#45FFFFFF"
        app:srcCompat="@drawable/empty_profile_image" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:gravity="center_horizontal"
        android:layoutDirection="ltr"
        android:text="@string/registration"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="18sp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="18sp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="18sp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/input_field"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/confirmUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="18sp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/input_field"
        android:hint="@string/confirm_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="18sp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/input_field"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="18sp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/input_field"
        android:hint="@string/confirm_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createAccount"
            android:enabled="true"
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="0.3"
            style="@style/button"
            android:background="@drawable/button"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/clearFieldsRegister"
            android:layout_width="10sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="0.3"
            style="@style/button"
            android:background="@drawable/button"
            android:text="@string/clear_fields" />
    </LinearLayout>

</LinearLayout>