<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.BonusAreaFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_bonus_area"
        android:textAlignment="center"
        android:textColor="#E20F0F0F"
            android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/social_level"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bonus_area_social_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="social level"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/social_points"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bonus_area_social_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="social points"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Monthly social points: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bonus_area_monthly_social_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="monthly social points"
                android:textSize="15sp" />
        </LinearLayout>

        <!--    <GridView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bbbLogo" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/besociallogo" />
    </GridView>-->
    </LinearLayout>
</ScrollView>